@@ -1,3 +1,3 @@
 [submodule "third_party/googletest"]
-	path = third_party/googletest
+	path = lib/googletest
 	url = https://github.com/google/googletest.git
