@@ -8,7 +8,7 @@ branches:
   - master
 env:
   global:
-  - GOOGLETEST_HOME=$TRAVIS_BUILD_DIR/third_party/googletest
+  - GOOGLETEST_HOME=$TRAVIS_BUILD_DIR/lib/googletest
 
 script:
 - cd $TRAVIS_BUILD_DIR;
