@@ -1,5 +1,5 @@
 include_directories(${CMAKE_SOURCE_DIR}/include)
-link_directories(${LIBRARY_OUTPUT_PATH})
+#link_directories(${LIBRARY_OUTPUT_PATH})
 
 include_directories($ENV{GOOGLETEST_HOME}/include)
 #link_directories(${LIBRARY_OUTPUT_PATH})
